# holacircle

./: .eslintignore  .eslintrc.js  .prettierrc  .stylelintrc.js  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  start_development.sh
backend/migrations/2020-05-11-000300_create_clients/: down.sql  up.sql
backend/migrations/2020-05-11-000657_create_roles/: down.sql  up.sql
backend/migrations/2020-06-02-080129_create_users/: up.sql
backend/migrations/2020-06-02-080259_create_members/: down.sql  up.sql
backend/src/: graphql.rs  main.rs  models.rs  schema.graphql  schema.rs
frontend/: .eslintrc.js  .gitignore  Dockerfile  codegen.yml  package.json  query.graphql  start_development.sh  tsconfig.json  tsconfig.paths.json
frontend/src/: App.css  App.tsx  index.css  index.tsx  serviceWorker.ts
frontend/src/components/: CircleInfo.tsx
frontend/src/components/forms/: HcInput.ts  HcTextarea.ts
frontend/src/containers/: CircleChartContainer.tsx
frontend/src/hooks/: useZoomableChart.tsx
frontend/src/models/: Circle.ts  Member.ts  Role.ts
frontend/src/redux/: rootReducer.ts  store.ts
src/: App.tsx  Home.tsx  index.css
src/components/: CircleChart.tsx  Home.tsx
src/components/CircleChart/: chart.js  chart.ts  index.tsx
src/containers/: CircleChart.tsx  CircleChartContainer.tsx  Home.tsx
src/hooks/: useZoomableChart.tsx
src/models/: Circle.ts  CircleViewData.ts  Member.ts  Role.ts
src/redux/: rootReducer.ts  store.ts
src/redux/modules/: circleModule.ts  focusModule.ts  taskModule.ts
(+4 files in other folders)
