[package]
name = "holacircle"
version = "0.1.0"
authors = ["yoshitsugu <yoshitsugu@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
juniper = "0.14.2"
r2d2 = "0.8.8"
futures01 = "0.1.29"
juniper-from-schema = "0.5.2"
actix-cors = "0.2.0"
itertools = "0.9.0"
serde_json = "1.0.53"
env_logger = "0.7.1"
juniper-eager-loading = "0.5.1"
log = "0.4.8"
